--- a/AP Oil Navigator PRO MT5/index.html
+++ b/AP Oil Navigator PRO MT5/index.html
@@ -39,7 +39,7 @@
       <a class="pill" href="https://www.mql5.com/en/market/product/148909" target="_blank" rel="noopener">Get on MQL5</a>
       <a class="pill ghost" href="./Quick%20Start.md" target="_blank" rel="noopener">Quick Start</a>
       <a class="pill ghost" href="#inputs">Inputs</a>
-      <a class="pill ghost" href="./AP%20Oil%20Navigator%20PRO%20MT5.set" target="_blank" rel="noopener">Preset (.set)</a>
+      <a class="pill ghost" href="./AP_Oil_Navigator_PRO_MT5.set" target="_blank" rel="noopener">Preset (.set)</a>
       <a class="pill ghost" href="#version">Version</a>
     </div>
 
