--- a/index.html
+++ b/index.html
@@ -127,11 +127,15 @@
       
       <div class="card">
         <h3>AP NY Breakout PRO (MT5)</h3>
-        <div class="tags"><span class="tag">Breakout</span><span class="tag">NY</span><span class="tag">MT5</span></div>
+        <div class="tags">
+        <span class="tag">Breakout</span>
+        <span class="tag">NY</span>
+        <span class="tag">MT5</span>
+        </div>
         <p>13:30–14:30 (server) box breakout via pending orders. SL at opposite side (+extra), TP by R-multiple. One set per window, validator-safe gates.</p>
         <div class="btns">
           <a class="btn" href="https://www.mql5.com/en/market/product/148887" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./AP%20NY%20Breakout%20PRO%20MT5/" target="_blank" rel="noopener">Docs</a>
+          <a class="btn ghost" href="./AP_NY_Breakout_PRO/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
 
