--- a/AP_Forex_DayTrader_MT5/index.html
+++ b/AP_Forex_DayTrader_MT5/index.html
@@ -7,7 +7,6 @@
   <meta name="description" content="AP Forex DayTrader — intraday EA for major FX pairs. Validator-safe with clear risk controls." />
   <link rel="stylesheet" href="/assets/site.css" />
   <style>
-    /* fallback styles if your site CSS differs */
     :root{--bg:#0b1220;--card:#111827;--border:#283146;--accent:#2563EB;--muted:#94a3b8}
     body{margin:0;font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:var(--bg);color:#e5e7eb}
     a{color:#93c5fd;text-decoration:none}
@@ -40,30 +39,35 @@
       <!-- replace PRODUCT_ID with your real MQL5 product id -->
       <p>
         <a class="btn primary" href="https://www.mql5.com/en/market/product/149584" target="_blank" rel="noopener">Buy on MQL5</a>
-        <a class="btn" href="../presets/AP_Forex_DayTrader_MT5/" target="_blank" rel="noopener">Presets</a>
+        <a class="btn" href="#downloads">Downloads (.set)</a>
       </p>
 
       <hr/>
 
       <h3>Docs</h3>
-      <p>
-        Designed for liquid FX pairs (EURUSD, GBPUSD, USDJPY). Uses session filters and strict order/stop checks.
-        Start with the presets above, then adjust risk and sessions to your broker.
-      </p>
+      <ul>
+        <li>Platform: MetaTrader 5</li>
+        <li>Pairs: Major FX (EURUSD, GBPUSD, USDJPY…)</li>
+        <li>Timeframes: M5–H1</li>
+      </ul>
 
       <h4>Quick start</h4>
       <ol>
-        <li>Download a preset and load via <em>Inputs → Load</em>.</li>
-        <li>Attach to your FX chart (M5–H1).</li>
-        <li>Confirm spread/stop warnings in the <em>Experts</em> tab.</li>
-        <li>Forward-test on demo first.</li>
+        <li>Download a preset below and load via <em>Inputs → Load</em>.</li>
+        <li>Attach to your FX chart and timeframe.</li>
+        <li>Check the <em>Experts</em> tab for any broker warnings.</li>
       </ol>
 
-      <h4>Compatibility</h4>
+      <hr/>
+
+      <h3 id="downloads">Downloads (.set)</h3>
       <ul>
-        <li>Platform: MetaTrader 5</li>
-        <li>Pairs: Major FX</li>
-        <li>Timeframes: M5–H1</li>
+        <!-- put files in: AP_Forex_DayTrader_MT5/presets/ -->
+        <li><a href="./presets/AP_Forex_DayTrader_MT5_M5.set" download>AP_Forex_DayTrader_MT5_M5.set</a></li>
+        <li><a href="./presets/AP_Forex_DayTrader_MT5_M15.set" download>AP_Forex_DayTrader_MT5_M15.set</a></li>
+        <li><a href="./presets/AP_Forex_DayTrader_MT5_H1.set" download>AP_Forex_DayTrader_MT5_H1.set</a></li>
+        <!-- optional ZIP -->
+        <!-- <li><a href="./presets/AP_Forex_DayTrader_MT5_Presets_v1.zip" download>AP_Forex_DayTrader_MT5_Presets_v1.zip</a></li> -->
       </ul>
     </div>
   </div>
