--- a/AP_Forex_DayTrader_MT5/index.html
+++ b/AP_Forex_DayTrader_MT5/index.html
@@ -39,7 +39,8 @@
       <!-- replace PRODUCT_ID with your real MQL5 product id -->
       <p>
         <a class="btn primary" href="https://www.mql5.com/en/market/product/149584" target="_blank" rel="noopener">Buy on MQL5</a>
-        <a class="btn" href="#downloads">Downloads (.set)</a>
+        <a class="btn" href="#downloads">Downloads (.set)</a><a class="btn" href="./presets/">Presets (.set)</a>
+
       </p>
 
       <hr/>
