--- a/AP_Forex_DayTrader_MT5/index.html
+++ b/AP_Forex_DayTrader_MT5/index.html
@@ -39,8 +39,7 @@
       <!-- replace PRODUCT_ID with your real MQL5 product id -->
       <p>
         <a class="btn primary" href="https://www.mql5.com/en/market/product/149584" target="_blank" rel="noopener">Buy on MQL5</a>
-        <a class="btn" href="#downloads">Downloads (.set)</a><a class="btn" href="./presets/">Presets (.set)</a>
-
+        <a class="btn" href="#downloads">Downloads (.set)</a>
       </p>
 
       <hr/>
@@ -64,12 +63,12 @@
       <h3 id="downloads">Downloads (.set)</h3>
       <ul>
         <!-- put files in: AP_Forex_DayTrader_MT5/presets/ -->
-        <li><a href="./presets/AP_Forex_DayTrader_MT5_M5.set" download>AP_Forex_DayTrader_MT5_M5.set</a></li>
-        <li><a href="./presets/AP_Forex_DayTrader_MT5_M15.set" download>AP_Forex_DayTrader_MT5_M15.set</a></li>
-        <li><a href="./presets/AP_Forex_DayTrader_MT5_H1.set" download>AP_Forex_DayTrader_MT5_H1.set</a></li>
-        <!-- optional ZIP -->
-        <!-- <li><a href="./presets/AP_Forex_DayTrader_MT5_Presets_v1.zip" download>AP_Forex_DayTrader_MT5_Presets_v1.zip</a></li> -->
-      </ul>
+        <h3 id="downloads">Downloads (.set)</h3>
+<ul>
+  <li><a href="./presets/AP_DayTrader_Balanced_Server0700-0900.set" download>AP_DayTrader_Balanced_Server0700-0900.set</a></li>
+  <li><a href="./presets/AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set" download>AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set</a></li>
+</ul>
+ </ul>
     </div>
   </div>
 </body>
