--- a/index.html
+++ b/index.html
@@ -195,7 +195,23 @@
          <a class="btn ghost" href="./AP%20Btc%20Session%20VWAP%20Bands%20MT5/" target="_blank" rel="noopener">Docs</a>
        </div>
      </div>
-      
+    
+    <div class="tool-card">
+      <div class="tool-title">AP Forex DayTrader (MT5)</div>
+      <div class="tool-tags">
+      <span class="tag">EA</span>
+      <span class="tag">Forex</span>
+      <span class="tag">MT5</span>
+      </div>
+       <p class="tool-desc">
+    Intraday day-trading for major FX pairs. Validator-safe with clear risk controls.
+     </p>
+     <div class="tool-actions">
+       <a class="btn primary" href="https://www.mql5.com/en/market/product/149584" target="_blank" rel="noopener">Get on MQL5</a>
+       <a class="btn" href="/AP_Forex_DayTrader_MT5/">Docs</a>
+     </div>
+   </div>
+
      <div class="card">
        <h3>AP BTC Spread Radar MT5</h3>
        <div class="tags"><span class="tag">Indicator</span><span class="tag">BTC</span><span class="tag">Spread</span></div>
