--- a/index.html
+++ b/index.html
@@ -90,22 +90,20 @@
           <a class="btn ghost" href="./AP_London_Breakout_PRO/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
+      
       <!-- AP Forex DayTrader (MT5) -->
-      <div class="tool-card">
-        <div class="tool-title">AP Forex DayTrader (MT5)</div>
-        <div class="tool-tags">
-        <span class="tag">EA</span>
-        <span class="tag">Forex</span>
-        <span class="tag">MT5</span>
+      <div class="card">
+        <h3>AP Forex DayTrader (MT5)</h3>
+        <div class="tags">
+        <span class="tag">EA</span><span class="tag">Forex</span><span class="tag">MT5</span>
         </div>
-        <p class="tool-desc">
-    Intraday day-trading for major FX pairs. Validator-safe with clear risk controls.
-      </p>
-        <div class="tool-actions">
-        <a class="btn primary" href="https://www.mql5.com/en/market/product/149584" target="_blank" rel="noopener">Get on MQL5</a>
-        <a class="btn" href="/AP_Forex_DayTrader_MT5/">Docs</a>
-     </div>
-   </div>
+        <p>Intraday day-trading for major FX pairs. Validator-safe with clear risk controls.</p>
+        <div class="btns">
+          <a class="btn" href="https://www.mql5.com/en/market/product/149584" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn ghost" href="./AP_Forex_DayTrader_MT5/" target="_blank" rel="noopener">Docs</a>
+        </div>
+      </div>
+
 
       <div class="card">
         <h3>AP ATR Trail Manager (PRO)</h3>
