--- a/AP_Forex_DayTrader_MT5/index.html
+++ b/AP_Forex_DayTrader_MT5/index.html
@@ -61,13 +61,11 @@
       <hr/>
 
       <h3 id="downloads">Downloads (.set)</h3>
-      <ul>
-        <!-- put files in: AP_Forex_DayTrader_MT5/presets/ -->
-        <h3 id="downloads">Downloads (.set)</h3>
 <ul>
-  <li><a href="./presets/AP_DayTrader_Balanced_Server0700-0900.set" download>AP_DayTrader_Balanced_Server0700-0900.set</a></li>
-  <li><a href="./presets/AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set" download>AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set</a></li>
+  <li><a href="/AP_Forex_DayTrader_MT5/presets/AP_DayTrader_Balanced_Server0700-0900.set" download>AP_DayTrader_Balanced_Server0700-0900.set</a></li>
+  <li><a href="/AP_Forex_DayTrader_MT5/presets/AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set" download>AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set</a></li>
 </ul>
+
  </ul>
     </div>
   </div>
