--- a/AP_Forex_DayTrader_MT5/index.html
+++ b/AP_Forex_DayTrader_MT5/index.html
@@ -38,9 +38,10 @@
 
       <!-- replace PRODUCT_ID with your real MQL5 product id -->
       <p>
-        <a class="btn primary" href="https://www.mql5.com/en/market/product/149584" target="_blank" rel="noopener">Buy on MQL5</a>
-        <a class="btn" href="#downloads">Downloads (.set)</a>
-      </p>
+  <a class="btn primary" href="https://www.mql5.com/en/market/product/149584" target="_blank" rel="noopener">Buy on MQL5</a>
+  <a class="btn" href="#presets">Presets (.set)</a>
+</p>
+
 
       <hr/>
 
@@ -60,11 +61,12 @@
 
       <hr/>
 
-      <h3 id="downloads">Downloads (.set)</h3>
+      <h3 id="presets">Downloads (.set)</h3>
 <ul>
   <li><a href="/AP_Forex_DayTrader_MT5/presets/AP_DayTrader_Balanced_Server0700-0900.set" download>AP_DayTrader_Balanced_Server0700-0900.set</a></li>
   <li><a href="/AP_Forex_DayTrader_MT5/presets/AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set" download>AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set</a></li>
 </ul>
+
 
  </ul>
     </div>
