--- a/AP_Forex_DayTrader_MT5/index.html
+++ b/AP_Forex_DayTrader_MT5/index.html
@@ -41,6 +41,14 @@
   <li><a href="/AP_Forex_DayTrader_MT5/presets/AP_DayTrader_Balanced_Server0700-0900.set" download>AP_DayTrader_Balanced_Server0700-0900.set</a></li>
   <li><a href="/AP_Forex_DayTrader_MT5/presets/AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set" download>AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set</a></li>
 </ul>
+<hr/>
+<h3>Screenshots</h3>
+<p>
+  <img src="/AP_Forex_DayTrader_MT5/img/01_chart.png" alt="DayTrader on-chart"
+       style="max-width:100%;border-radius:12px;border:1px solid #283146;margin-bottom:12px;">
+  <img src="/AP_Forex_DayTrader_MT5/img/02_inputs.png" alt="Inputs"
+       style="max-width:100%;border-radius:12px;border:1px solid #283146;">
+</p>
 
     </div>
   </div>
