--- a/AP_Forex_DayTrader_MT5/index.html
+++ b/AP_Forex_DayTrader_MT5/index.html
@@ -38,9 +38,10 @@
 
       <h3 id="presets">Downloads (.set)</h3>
 <ul>
-  <li><a href="/AP_Forex_DayTrader_MT5/presets/AP_DayTrader_Balanced_Server0700-0900.set" download>AP_DayTrader_Balanced_Server0700-0900.set</a></li>
-  <li><a href="/AP_Forex_DayTrader_MT5/presets/AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set" download>AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set</a></li>
+  <li><a href="./AP_DayTrader_Balanced_Server0700-0900.set" download>AP_DayTrader_Balanced_Server0700-0900.set</a></li>
+  <li><a href="./AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set" download>AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set</a></li>
 </ul>
+
 <hr/>
 <h3>Screenshots</h3>
 <p>
