--- a/AP_Forex_DayTrader_MT5/index.html
+++ b/AP_Forex_DayTrader_MT5/index.html
@@ -45,10 +45,11 @@
 <hr/>
 <h3>Screenshots</h3>
 <p>
-  <img src="/AP_Forex_DayTrader_MT5/img/01_chart.png" alt="DayTrader on-chart"
-       style="max-width:100%;border-radius:12px;border:1px solid #283146;margin-bottom:12px;">
-  <img src="/AP_Forex_DayTrader_MT5/img/02_inputs.png" alt="Inputs"
-       style="max-width:100%;border-radius:12px;border:1px solid #283146;">
+  <img src="./img/01_chart.png" alt="DayTrader on-chart"
+     style="max-width:100%;border-radius:12px;border:1px solid #283146;margin-bottom:12px;">
+<img src="./img/02_inputs.png" alt="Inputs"
+     style="max-width:100%;border-radius:12px;border:1px solid #283146;">
+
 </p>
 
     </div>
