--- a/AP_Forex_DayTrader_MT5/index.html
+++ b/AP_Forex_DayTrader_MT5/index.html
@@ -40,6 +40,11 @@
 <ul>
   <li><a href="./AP_DayTrader_Balanced_Server0700-0900.set" download>AP_DayTrader_Balanced_Server0700-0900.set</a></li>
   <li><a href="./AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set" download>AP_DayTrader_Balanced_LocalDK0700-0900_ServerPlus1.set</a></li>
+
+  <li><a href="./AP_DayTrader_Momentum_Conservative.set" download>AP_DayTrader_Momentum_Conservative.set</a></li>
+  <li><a href="./AP_DayTrader_Breakout_Session_London.set" download>AP_DayTrader_Breakout_Session_London.set</a></li>
+  <li><a href="./AP_DayTrader_Balanced_Tighter.set" download>AP_DayTrader_Balanced_Tighter.set</a></li>
+  <li><a href="./AP_DayTrader_Balanced_DK_plus1h.set" download>AP_DayTrader_Balanced_DK_plus1h.set</a></li>
 </ul>
 
 <hr/>
