--- a/btc-breakdown.html
+++ b/btc-breakdown.html
@@ -72,17 +72,22 @@
       </section>
 
       <aside class="card" id="presets">
-        <h3 style="margin-top:0">Preset pack & quick notes</h3>
-        <p class="small muted">Drop your email; we’ll send the presets + 1-pager (and nothing spammy).</p>
-        <!-- Formspree: replace YOUR_KEY below after you create it -->
-        <form action="https://formspree.io/f/YOUR_KEY" method="POST">
-          <input class="input" type="email" name="email" placeholder="you@example.com" required>
-          <input type="hidden" name="source" value="btc52-landing">
-          <div style="height:10px"></div>
-          <button class="btn btn-primary" type="submit">Send me the presets</button>
-        </form>
-        <p class="small muted" style="margin-top:10px">Or DM “#BTCpack” on our Facebook page.</p>
-      </aside>
+  <h3 style="margin-top:0">Preset pack</h3>
+
+  <a class="btn btn-ghost"
+     href="https://aptradingtools.com/assets/presets/btc-breakdown/v5.2/AP_BTC_Breakdown_v5.2_Presets.zip"
+     download>
+    Get preset pack
+  </a>
+
+  <p class="small" style="margin-top:10px">
+    Or grab:
+    <a href="/assets/presets/btc-breakdown/v5.2/AP_BTC_Breakdown_v5.2_Conservative.set" download>Conservative</a> ·
+    <a href="/assets/presets/btc-breakdown/v5.2/AP_BTC_Breakdown_v5.2_Balanced.set" download>Balanced</a> ·
+    <a href="/assets/presets/btc-breakdown/v5.2/AP_BTC_Breakdown_v5.2_Aggressive.set" download>Aggressive</a>
+  </p>
+</aside>
+
     </div>
 
     <section class="card" style="margin-top:14px">
