--- a/btc-breakdown.html
+++ b/btc-breakdown.html
@@ -75,17 +75,19 @@
   <h3 style="margin-top:0">Preset pack</h3>
 
   <a class="btn btn-ghost"
-     href="https://aptradingtools.com/assets/presets/btc-breakdown/v5.2/AP_BTC_Breakdown_v5.2_Presets.zip"
+     href="/assets/presets/btc-breakdown/v5.2/AP_BTC_Breakdown_v5.2_Presets.zip"
      download>
-    Get preset pack
+    Download preset pack (.zip)
   </a>
-
+  <!-- Optional: direct .set links — only keep these if you've uploaded them -->
+  <!--
   <p class="small" style="margin-top:10px">
     Or grab:
     <a href="/assets/presets/btc-breakdown/v5.2/AP_BTC_Breakdown_v5.2_Conservative.set" download>Conservative</a> ·
     <a href="/assets/presets/btc-breakdown/v5.2/AP_BTC_Breakdown_v5.2_Balanced.set" download>Balanced</a> ·
     <a href="/assets/presets/btc-breakdown/v5.2/AP_BTC_Breakdown_v5.2_Aggressive.set" download>Aggressive</a>
   </p>
+  -->
 </aside>
 
     </div>
