--- a/btc-breakdown.html
+++ b/btc-breakdown.html
@@ -82,9 +82,9 @@
 
   <p class="small" style="margin-top:10px">
     Or grab:
-    <a href="/assets/presets/btc-breakdown/v5.2/AP_BTC_Breakdown_v5.2_Conservative.set" download>Conservative</a> ·
+    <a href="/assets/presets/btc-breakdown/v5.2/AP_BTC_Breakdown_Conservative.set" download>Conservative</a> ·
     <a href="/assets/presets/btc-breakdown/v5.2/AP_BTC_Breakdown_v5.2_Balanced.set" download>Balanced</a> ·
-    <a href="/assets/presets/btc-breakdown/v5.2/AP_BTC_Breakdown_v5.2_Aggressive.set" download>Aggressive</a>
+    <a href="/assets/presets/btc-breakdown/v5.2/AP_BTC_Breakdown_Aggressive.set" download>Aggressive</a>
   </p>
 </aside>
 
