--- a/AP_Metals_London_Breakout_PRO_MT5/index.html
+++ b/AP_Metals_London_Breakout_PRO_MT5/index.html
@@ -22,6 +22,10 @@ ul{margin:0 0 0 18px}
 </head>
 <body>
 <div class="container">
+  <img src="../assets/metals-london-breakout/hero.png"
+     alt="AP Metals London Breakout PRO — metals breakout hero"
+     style="width:100%;max-height:420px;object-fit:cover;border-radius:12px;border:1px solid #1d2633;margin:12px 0 8px;">
+
   <h1>AP Metals London Breakout PRO (MT5)</h1>
   <p>Asian-session box breakout for metals (XAU/XAG/XPT/XPD). Per-metal presets, ATR-adaptive distances, Stops/Freeze auto-fit, lot rounding & margin down-stepping. Validator-safe (no DLL/WebRequest/File I/O).</p>
   <div class="pills">
