--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
     .note{background:#0e141d;border:1px dashed #243244;border-radius:12px;padding:14px;margin:18px 0}
   </style>
 </head>
+  <div style="margin:16px 0;">
+  <a href="./AP_Metals_London_Breakout_PRO_MT5/index.html"
+     style="display:inline-block;padding:10px 14px;border-radius:999px;background:#1b2330;color:#e6e8ec;text-decoration:none;border:1px solid #263244;">
+    AP Metals London Breakout PRO (MT5) — $39.99 launch
+  </a>
+</div>
 <body>
   <header>
     <h1>AP Trading Tools</h1>
