--- a/index.html
+++ b/index.html
@@ -189,6 +189,26 @@
           <a class="btn ghost" href="./AP%20Trade%20Manager/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
+      
+        <!-- AP Metals London Breakout PRO (MT5) -->
+<div style="background:#12161c;border:1px solid #263244;border-radius:14px;padding:16px;margin:12px 0;">
+  <div style="font-weight:600;color:#e6e8ec;margin-bottom:6px;">AP Metals London Breakout PRO (MT5)</div>
+  <div style="display:flex;gap:6px;flex-wrap:wrap;margin:6px 0 10px;">
+    <span style="background:#1b2330;border:1px solid #263244;color:#9aa3b2;border-radius:999px;padding:4px 8px;font-size:12px;">EA</span>
+    <span style="background:#1b2330;border:1px solid #263244;color:#9aa3b2;border-radius:999px;padding:4px 8px;font-size:12px;">Breakout</span>
+    <span style="background:#1b2330;border:1px solid #263244;color:#9aa3b2;border-radius:999px;padding:4px 8px;font-size:12px;">Metals</span>
+    <span style="background:#1b2330;border:1px solid #263244;color:#9aa3b2;border-radius:999px;padding:4px 8px;font-size:12px;">MT5</span>
+  </div>
+  <p style="color:#9aa3b2;margin:0 0 12px;">
+    Asian-session box breakout engineered for metals (XAU/XAG/XPT/XPD). Per-metal presets, ATR-adaptive distances, and validator-safe placement.
+  </p>
+  <div style="display:flex;gap:8px;flex-wrap:wrap;">
+    <a href="./AP_Metals_London_Breakout_PRO_MT5/index.html"
+       style="display:inline-block;padding:8px 12px;border-radius:10px;background:#1b2330;color:#e6e8ec;text-decoration:none;border:1px solid #263244;">Docs</a>
+    <a href="#"
+       style="display:inline-block;padding:8px 12px;border-radius:10px;background:#1b2330;color:#e6e8ec;text-decoration:none;border:1px solid #263244;">Get on MQL5</a>
+  </div>
+</div>
 
       <div class="card">
         <h3>AP BTC Breakdown (MT5)</h3>
