--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <!-- Favicons -->
 <link rel="icon" href="/assets/favicon.png?v=1" type="image/png">
 <link rel="shortcut icon" href="/assets/favicon.png?v=1" type="image/png">
+<script src="https://app.lemonsqueezy.com/js/lemon.js" defer></script>
 
 <!-- Canonical URL (homepage) -->
 <link rel="canonical" href="https://aptradingtools.com/">
