--- a/index.html
+++ b/index.html
@@ -99,12 +99,10 @@
       </div>
 
       <div class="card">
-        <h3>AP ATR Trail Manager (PRO)</h3>
-        <div class="tags"><span class="tag">Risk</span><span class="tag">Trade Manager</span><span class="tag">ATR</span></div>
-        <p>Multi-symbol ATR trailing with partials, daily loss guard, and calm management for open positions.</p>
-        <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148700" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./AP_ATR_Trail_Manager_PRO/" target="_blank" rel="noopener">Docs</a>
+        <a class="btn lemonsqueezy-button"
+          href="https://aptradingtools.lemonsqueezy.com/buy/64ec53a2-fcdd-4a93-a5f2-3b2edb944623">
+          Buy Now (MT5)
+         </a>
         </div>
       </div>
     
