--- a/index.html
+++ b/index.html
@@ -66,17 +66,21 @@
     </div>
 
     <!-- ======================= FEATURED EAs ======================= -->
-    <h2>Featured EAs</h2>
-    <div class="grid">
-      <div class="card">
-        <h3>AP London Session Breakout (MT5)</h3>
-        <div class="tags"><span class="tag">Breakout</span><span class="tag">Time-box</span><span class="tag">MT5</span></div>
-        <p>Structured London session range breakouts with session filters, pending-order safety, and validator-clean logic.</p>
-        <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148680" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./London%20Session%20Breakout/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
+    <div class="card">
+  <h3>AP London Session Breakout (MT5)</h3>
+  <div class="tags">
+    <span class="tag">Breakout</span><span class="tag">Time-box</span><span class="tag">MT5</span>
+  </div>
+  <p>Structured London session range breakouts with session filters, pending-order safety, and validator-clean logic.</p>
+  <div class="btns">
+    <a class="btn lemonsqueezy-button"
+       href="https://aptradingtools.lemonsqueezy.com/buy/f773c823-4beb-41b9-ad48-244a89a87fbf">
+      Buy Now (MT5)
+    </a>
+    <a class="btn ghost" href="./AP_London_Session_Breakout/" target="_blank" rel="noopener">Docs</a>
+  </div>
+</div>
+
 
       <div class="card">
         <h3>AP InsideBar Breakout (MT5)</h3>
