--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
         <div class="tags"><span class="tag">Price Action</span><span class="tag">Breakout</span><span class="tag">MT5</span></div>
         <p>Inside-bar detection with smart pending placement and automatic opposite-side cleanup after fills.</p>
         <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148713" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./insidebar-breakout/" target="_blank" rel="noopener">Docs</a>
+          <a class="btn lemonsqueezy-button"
+          href="https://aptradingtools.lemonsqueezy.com/buy/8c6e289c-279b-4759-88ba-9b61cfa83b04">
+          Buy Now (MT5)
+          </a>
         </div>
       </div>
       
