--- a/index.html
+++ b/index.html
@@ -109,6 +109,21 @@
       </div>
     
       <div class="card">
+        <h3>AP DayTrader Impulse Box (MT5)</h3>
+        <div class="tags">
+        <span class="tag">Momentum</span><span class="tag">Breakout</span><span class="tag">MT5</span>
+        </div>
+        <p>Two engines: Momentum Pullback (EMA/RSI) + Session Breakout (M5 box). ATR stops, BE & trailing, spread/stop guards.</p>
+        <div class="btns">
+          <a class="btn lemonsqueezy-button"
+          href="https://aptradingtools.lemonsqueezy.com/buy/a6895733-93a0-427b-9988-d65f924ddde6">
+          Buy Now (MT5)
+          </a>
+          <a class="btn ghost" href="./AP_DayTrader_Impulse_Box/" target="_blank" rel="noopener">Docs</a>
+        </div>
+      </div>
+
+      <div class="card">
         <h3>AP Forex DayTrader (MT5)</h3>
         <div class="tags">
         <span class="tag">EA</span><span class="tag">Forex</span><span class="tag">MT5</span>
