--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <header>
     <h1>AP Trading Tools</h1>
-    <p class="lead">MT5 Expert Advisors & Indicators – clean code, validator-safe, and trader-friendly. Support via MQL5 messages/comments only.</p>
+    <p class="lead">MT5 Expert Advisors & Indicators – clean code, and trader-friendly Support. </p>
   </header>
 <!-- Canonical URL (homepage) -->
 <link rel="canonical" href="https://aptradingtools.com/">
