--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 <meta name="description" content="MT5 Expert Advisors & Indicators — clean code, validator-safe, trader-friendly.">
 
   <style>
+    .hero{max-width:1100px;margin:26px auto 10px;text-align:center;}
+.hero h1{font-size:32px;line-height:1.15;margin:0 0 6px;}
+.hero .subtitle{opacity:.8;margin:0;}
     :root{--bg:#0b0f14;--card:#121822;--text:#e8eef6;--muted:#9fb0c3;--accent:#58a6ff;}
     *{box-sizing:border-box}
     body{margin:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Arial}
