--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body::before{
   position: fixed;
   inset: 0;
   z-index: -2;
-  background: url("/assets/bg.jpg") center / cover no-repeat;
+  background: url("/assets/bg.webp") center / cover no-repeat;
 }
 
 /* Optional: subtle dark overlay for readability on top of the photo */
